<resources>
    <string name="app_name">LearningPortalApp</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="enter_url">Enter URL</string>
    <string name="go">Go</string>
    <string name="google">Google</string>
    <string name="youtube">YouTube</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="khan_academy">Khan Academy</string>
    <string name="university">University</string>
</resources>